# tauri-auto-update-template

./: .env.example  .gitattributes  .gitignore  CHANGELOG.md  CI_VERIFICATION_GUIDE.md  FOR_TEMPLATE_MAINTAINER.md  Makefile  OPTIMIZATIONS.md  PROJECT_SUMMARY.md  QUICK_REFERENCE.md  README.md  SECURITY_AUDIT.md  SETUP.md  TEMPLATE_README.md  UPDATER_DIAGNOSIS.md  UPDATE_TESTING_GUIDE.md  diagnose-signing.js  generate-icon.js  index.html  init-template.js  package-lock.json  package.json  validate-setup.js  vite.config.ts
.claude/: settings.local.json
.github/workflows/: ci.yml  release.yml
src/: main.ts  style.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/icons/: README.md  icon.icns
src-tauri/src/: main.rs
