[package]
name = "tauri-auto-update-app"
version = "0.1.0"
description = "A Tauri app with auto-update support"
authors = ["you"]
edition = "2021"

[lib]
name = "tauri_auto_update_app_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-updater = "2"
tauri-plugin-dialog = "2"
tauri-plugin-process = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
