[package]
name = "tauri-auto-update-app"
version = "0.1.0"
description = "A Tauri app with auto-update support"
authors = ["you"]
edition = "2021"

[lib]
name = "tauri_auto_update_app_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-updater = "2"
tauri-plugin-dialog = "2"
tauri-plugin-process = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt"] }
tracing-appender = "0.2"
time = { version = "0.3", features = ["formatting", "macros"] }
dirs = "5.0"

[profile.release]
strip = "debuginfo"       # Strip only debug symbols, keep other metadata for updater
opt-level = "z"           # Optimize for size
lto = true                # Enable Link Time Optimization
codegen-units = 1         # Better optimization (slower compile, smaller output)
panic = "abort"           # Smaller panic handler
